<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2021 Ennis Wu. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">SSShadow</string>

    <string name="simple_shadow_layer">Simple-ShadowLayer</string>
    <string name="simple_shadow_decoration">Simple-ShadowDecoration</string>
    <string name="simple_shadow_decoration2">Simple-ShadowDecoration2</string>
    <string name="simple_shadow_wrapper_layout">Simple-ShadowWrapperLayout</string>
    <string name="simple_shadow_wrapper_layout2">Simple-ShadowWrapperLayout2</string>

    <string name="shadow_layer">ShadowLayer</string>
    <string name="shadow_wrapper_layout">ShadowWrapperLayout</string>
    <string name="shadow_decoration">ShadowDecoration</string>
    <string name="setting">Setting</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="staggered_grid">StaggeredGrid</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="reverse">Reverse</string>
    <string name="bound_left">左间距</string>
    <string name="bound_top">顶间距</string>
    <string name="bound_right">右间距</string>
    <string name="bound_bottom">底间距</string>
    <string name="bound_inner">中间距</string>
    <string name="bound_inner_horizontal">中水平间距</string>
    <string name="bound_inner_vertical">中垂直间距</string>
    <string name="bound_padding_end">底部 Padding</string>
    <string name="hello_world">Hello World!</string>
    <string name="click_me">Click Me</string>
    <string name="drag_me">Drag Me</string>
</resources>